5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1582_1334.log
== TEST (2019-03-13 22:48:26) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  Ellipsis
Divisao:  Ellipsis
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:49:09) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  Ellipsis
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:49:25) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:49:33) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:49:54) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:49:56) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.173247
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:50:22) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 5 + 3 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:50:24) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 5 + 3 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.150852
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:52:23) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 80 // 9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:52:26) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 80 // 9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.279181
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:52:42) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.130172
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:52:42) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:55:36) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 25 // 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  3
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:55:38) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 25 // 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.194393
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  3
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:56:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 100 // 32 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  3
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:56:22) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 25 // 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  3
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:56:27) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 25 // 7 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  3
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:56:33) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 25 // 6 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  4
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:56:40) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 25 // 2 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  12
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:56:47) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 25 // 3 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:56:51) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 25 // 3 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.287269
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:59:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 64 (1/2) )

print("Potenciacao: ", 2 ** 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Resto: ", 64 (1/2) )
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:00:03) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 64 ** (1/2) )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:00:05) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 64 ** (1/2) )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.136118
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:01:49) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 3//20 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:02:05) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 3 // 20 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:02:07) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 3 // 20 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.141956
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:05:10) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",  )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto: 
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:05:11) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",  )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.181598
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto: 
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:05:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", ... )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  Ellipsis
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:05:23) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", ... )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.142113
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  Ellipsis
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:24:42) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17%9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:24:45) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17%9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.141624
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:24:53) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17 % 9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:24:55) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17 % 9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.140556
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:25:48) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 14 - 6)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17 % 9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:25:49) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 14 - 6)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17 % 9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.169534
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:26:15) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 14 - 6)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17%9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:26:17) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 14 - 6)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17%9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.181947
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:30:13) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 14 - 6)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17 % 9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:30:15) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 14 - 6)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17 % 9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.162251
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:30:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 14 - 6)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17%9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:30:48) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 14 - 6)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17%9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.179973
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:30:56) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 14 - 6)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17%9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:31:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17%9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:31:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17%9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.137553
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:04:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:04:52) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.15124
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:05:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:05:19) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.129042
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:12:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:12:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:22:49) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 9%4 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  1
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:22:58) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.158596
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:23:20) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:23:27) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.11682
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:23:36) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:23:38) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.196159
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:24:05) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 80%9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:24:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 80%9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.176015
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:24:17) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 80 % 9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.198949
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:24:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 80 % 9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:24:41) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.129082
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:34:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.168881
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:35:02) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", input("resto:") )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  xxx
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:35:06) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", input("resto:") )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.134901
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  xxx
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:35:16) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.173803
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:35:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.155461
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:35:19) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.11005
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:35:19) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.146478
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:35:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 9%4 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.098758
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  1
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:35:33) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 9%4 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  1
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:35:45) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 80 % 9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:35:49) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 80 % 9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.155886
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 19:46:28) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.129642
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:46:47) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:47:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 19:47:10) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.227805
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:20:58) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: " 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.178828
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 9
    print("Resto: " 8 )
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:21:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.136773
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:21:07) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.22601
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:21:07) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:21:10) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.152419
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:21:25) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",  )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.204075
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto: 
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:21:27) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",  )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto: 
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:21:28) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",  )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.131238
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto: 
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:21:36) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",8  )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.132768
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:20:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8  )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:20:10) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8  )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.183526
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:20:19) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8  )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.237114
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:20:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.120623
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:20:32) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:20:33) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.208736
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:20:41) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",8)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:20:42) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.141945
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:20:50) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:20:52) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.211338
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:21:05) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",  8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.221168
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:21:06) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",  8)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:21:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",  8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.164112
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:21:28) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",17%9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:21:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ",17%9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.217741
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:21:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17%9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:21:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 17%9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.157302
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:21:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.135794
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:21:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:21:48) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.161467
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:22:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 80%9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:22:11) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 80%9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.183072
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:22:15) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:22:16) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.157274
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:22:19) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 9 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  9
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:22:20) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 9 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.163632
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  9
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:22:29) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:22:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.199773
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:22:50) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:22:51) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.125177
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:45:40) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 8 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.176499
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
